--- a/src/main/webapp/inicio.xhtml
+++ b/src/main/webapp/inicio.xhtml
@@ -26,26 +26,27 @@
         <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop" class="videoPrincipal">
             <source src="https://storage.googleapis.com/coverr-main/mp4/Mt_Baker.mp4" type="video/mp4"/>
         </video>
-        <div class="overlay"></div>
-        <div class="container-fluid h-100 d-flex flex-column justify-content-center align-items-center contenido">
-            <div class="container d-flex flex-row align-items-center">
+        <h:panelGroup styleClass="overlay"></h:panelGroup>
+        <h:panelGroup styleClass="overlay"></h:panelGroup>
+        <h:panelGroup styleClass="container-fluid h-100 d-flex flex-column justify-content-center align-items-center contenido">
+            <h:panelGroup styleClass="container d-flex flex-row align-items-center">
                 <p:graphicImage name="img/logo.png" class="img-responsive m-auto" alt="Logotipo del foro Atlanthis."/>
-            </div>
+            </h:panelGroup>
             <h1 class="h1 display-1 textoPrincipal">Atlanthis</h1>
             <!-- TODO convertir todos los campos a JSF cuando se termine el mockup -->
             <form class="container d-flex flex-column align-items-center" action="#" method="POST">
-                <div class="input-group mt-3 flex-nowrap w-25">
+                <h:panelGroup styleClass="input-group mt-3 flex-nowrap w-25">
                     <span class="input-group-text" id="addon-wrapping"><i class="fa-solid fa-user"></i></span>
                     <input type="text" class="form-control" placeholder="Email" aria-label="Email" aria-describedby="addon-wrapping"/>
-                </div>
-                <div class="input-group mt-1 flex-nowrap w-25">
+                </h:panelGroup>
+                <h:panelGroup styleClass="input-group mt-1 flex-nowrap w-25">
                     <span class="input-group-text" id="addon-wrapping"><i class="fa-solid fa-lock"></i></span>
                     <input type="text" class="form-control" placeholder="Contraseña" aria-label="Password" aria-describedby="addon-wrapping"/>
-                </div>
+                </h:panelGroup>
                 
                 <button class="w-25 btn mt-1 btn-primary" type="submit">Entrar</button>
             </form>
-        </div>
+        </h:panelGroup>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
     </h:body>
 </html>
