--- a/src/main/webapp/inicio.xhtml
+++ b/src/main/webapp/inicio.xhtml
@@ -24,7 +24,7 @@
 
     <h:body>
         <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop" class="videoPrincipal">
-            <source src="https://storage.googleapis.com/coverr-main/mp4/Mt_Baker.mp4" type="video/mp4"/>
+            <source src="https://media.githubusercontent.com/media/RATX-Developer-Team/Atlanthis/main/src/main/webapp/resources/video/video.mp4" type="video/mp4"/>
         </video>
         <div class="overlay"></div>
         <div class="container-fluid h-100 d-flex flex-column justify-content-center align-items-center contenido">
