--- a/src/main/webapp/inicio.xhtml
+++ b/src/main/webapp/inicio.xhtml
@@ -24,7 +24,7 @@
 
     <h:body>
         <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop" class="videoPrincipal">
-            <source src="https://media.githubusercontent.com/media/RATX-Developer-Team/Atlanthis/main/src/main/webapp/resources/video/video.mp4" type="video/mp4"/>
+            <source src="https://raw.githubusercontent.com/RATX-Developer-Team/Atlanthis/main/src/main/webapp/resources/video/video.mp4" type="video/mp4"/>
         </video>
         <div class="overlay"></div>
         <div class="container-fluid h-100 d-flex flex-column justify-content-center align-items-center contenido">
@@ -34,17 +34,19 @@
             <h1 class="h1 display-1 textoPrincipal">Atlanthis</h1>
             <!-- TODO convertir todos los campos a JSF cuando se termine el mockup -->
             <form class="container d-flex flex-column align-items-center" action="#" method="POST">
-                <div class="input-group mt-3 flex-nowrap w-25">
-                    <span class="input-group-text" id="addon-wrapping"><i class="fa-solid fa-user"></i></span>
-                    <input type="text" class="form-control" placeholder="Email" aria-label="Email" aria-describedby="addon-wrapping"/>
+                <div class="input-group mt-3 flex-nowrap w-inputs">
+                    <span class="input-group-text campo" id="addon-wrapping"><i class="fa-solid fa-envelope"></i></span>
+                    <input type="text" class="form-control campo" placeholder="Email" aria-label="Email" aria-describedby="addon-wrapping"/>
                 </div>
-                <div class="input-group mt-1 flex-nowrap w-25">
-                    <span class="input-group-text" id="addon-wrapping"><i class="fa-solid fa-lock"></i></span>
-                    <input type="text" class="form-control" placeholder="Contraseña" aria-label="Password" aria-describedby="addon-wrapping"/>
+                <div class="input-group mt-1 flex-nowrap w-inputs">
+                    <span class="input-group-text campo" id="addon-wrapping"><i class="fa-solid fa-lock"></i></span>
+                    <input type="password" class="form-control campo" placeholder="Contraseña" aria-label="Password" aria-describedby="addon-wrapping"/>
                 </div>
                 
-                <button class="w-25 btn mt-1 btn-primary" type="submit">Entrar</button>
+                <button class="w-inputs btn mt-4 btn-outline-personalizado" type="submit">Entrar</button>
+                <p class="w-inputs">¿No tienes cuenta? <br/> Pulsa <p:link href="index.xhtml">aquí</p:link> para registrarte.</p>
             </form>
+            <h4><h:outputText value="#{beanLogin.error}" /></h4>
         </div>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
     </h:body>
