Arreglo de inicio en index, añadida foto de perfil al header, añadido ipl de categoria y subcategoria

--- a/src/main/webapp/fix.xhtml
+++ b/src/main/webapp/fix.xhtml
@@ -8,6 +8,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1"/>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
         <title>Atlanthis | Foro líder de información en español</title>
-        <meta http-equiv = "refresh" content = "2; url = /Atlanthis/faces/index.xhtml"/>
+        <meta http-equiv = "refresh" content = "2; url = /Atlanthis/faces/inicio.xhtml"/>
     </h:head>
 </html>
