--- a/src/main/webapp/subcategoria.xhtml
+++ b/src/main/webapp/subcategoria.xhtml
@@ -18,8 +18,16 @@
                     </ol>
                 </nav>
             </div>
+            <p:dialog styleClass="dialogSubcate" header="Crear un tema" widgetVar="dlg2" minHeight="40" width="350" showEffect="fade" modal="true">
+                <span class="ui-input-icon-left mb-3">
+                    <i class="pi pi-paperclip" />
+                    <p:inputText required="true" styleClass="tituloHilo" placeholder="Titulo" value="#{beanSubcategoria.titulo}" />
+                </span>
+                <div><p:textEditor widgetVar="editor1" styleClass="contenidoHilo" value="#{beanSubcategoria.contenidoPrincipal}" height="300" /></div>          
+                <p:commandButton type="button" value="Crear" styleClass="mt-1 botonCrearHilo" icon="pi pi-check"/>
+            </p:dialog>
             <main class="container contenedorSubcategoria mt-3 mb-5">
-                
+                <p:commandButton styleClass="mb-3" value="Crear tema" type="button" icon="pi pi-external-link" onclick="PF('dlg2').show()"/>
             </main>
         </ui:define>
     </ui:composition>
