añadido perfil de usuarios

--- a/src/main/webapp/register.xhtml
+++ b/src/main/webapp/register.xhtml
@@ -56,11 +56,11 @@
                 <div class="input-group mt-3 flex-nowrap w-inputs">
                     <span class="input-group-text campo" id="addon-wrapping"><i class="fa-solid fa-earth-africa"></i></span>
                     <h:selectOneMenu required="" value="#{beanRegister.pais}" styleClass="form-control campo pais_register">
-                        <f:selectItem itemValue="germany" itemLabel="Alemania"/>
-                        <f:selectItem itemValue="china" itemLabel="China"/>
-                        <f:selectItem itemValue="spain" itemLabel="España"/>
-                        <f:selectItem itemValue="usa" itemLabel="Estados Unidos"/>
-                        <f:selectItem itemValue="france" itemLabel="Francia"/>
+                        <f:selectItem itemValue="Alemania" itemLabel="Alemania"/>
+                        <f:selectItem itemValue="China" itemLabel="China"/>
+                        <f:selectItem itemValue="España" itemLabel="España"/>
+                        <f:selectItem itemValue="EEUU" itemLabel="Estados Unidos"/>
+                        <f:selectItem itemValue="Francia" itemLabel="Francia"/>
                     </h:selectOneMenu>
                 </div>
                 <h:commandButton value="Registrarte!" action="#{beanRegister.guardarUsuario()}" styleClass="w-inputs btn mt-4 btn-outline-personalizado"/>
