--- a/src/main/webapp/subcategoria.xhtml
+++ b/src/main/webapp/subcategoria.xhtml
@@ -18,7 +18,7 @@
                     </ol>
                 </nav>
             </div>
-            <p:dialog styleClass="dialogSubcate" header="Crear un tema" widgetVar="dlg2" minHeight="40" width="350" showEffect="fade" modal="true">
+            <p:dialog styleClass="dialogSubcate" header="Crear un tema" widgetVar="dlg2" minHeight="40" width="80%" showEffect="fade" modal="true">
                 <span class="ui-input-icon-left mb-3">
                     <i class="pi pi-paperclip" />
                     <p:inputText required="true" styleClass="tituloHilo" placeholder="Titulo" value="#{beanSubcategoria.titulo}" />
