--- a/src/main/webapp/perfil.xhtml
+++ b/src/main/webapp/perfil.xhtml
@@ -18,7 +18,7 @@
                 </nav>
             </div>
             <main class="container contenedorPerfiles mt-5 mb-5">
-                <p:linkButton outcome="miperfil" value="Editar mi Perfil" icon="pi pi-user-edit" style="margin-right:20px;" styleClass="mb-4"/>
+                <p:linkButton outcome="miperfil" value="Ir a mi Perfil" icon="pi pi-user-edit" style="margin-right:20px;" styleClass="mb-4"/>
             </main>
         </ui:define>
     </ui:composition>
