mejoras de perfil añadido poder cerrar hilos, añadido subida de archivos y poder editar tu perfil, añadido discusiones

--- a/src/main/webapp/hilo.xhtml
+++ b/src/main/webapp/hilo.xhtml
@@ -25,7 +25,7 @@
                 <p:commandButton type="button" value="Crear" styleClass="mt-1 botonCrearRespuesta" icon="pi pi-check"/>
             </p:dialog>
             <main class="container contenedorHilos mt-5 mb-5">
-                <p:commandButton styleClass="mb-5" value="Responder" type="button" icon="pi pi-external-link" onclick="PF('dlg').show()"/>
+                <p:commandButton styleClass="mb-5 ocultarBotonCrear" value="Responder" type="button" icon="pi pi-external-link" onclick="PF('dlg').show()"/>
             </main>
         </ui:define>
     </ui:composition>
