--- a/src/main/webapp/miperfil.xhtml
+++ b/src/main/webapp/miperfil.xhtml
@@ -3,7 +3,8 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui">
+      xmlns:p="http://primefaces.org/ui"
+      xmlns:f="http://xmlns.jcp.org/jsf/core">
     <ui:composition template="./templates/template.xhtml">
         <ui:define name="scripts">
             <h:outputScript name="js/miperfil.js"/>
@@ -13,12 +14,37 @@
                 <nav style="--bs-breadcrumb-divider: url(&#34;data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8'%3E%3Cpath d='M2.5 0L1 1.5 3.5 4 1 6.5 2.5 8l4-4-4-4z' fill='currentColor'/%3E%3C/svg%3E&#34;);" aria-label="breadcrumb">
                     <ol class="breadcrumb">
                       <li class="breadcrumb-item text-black"><a href="/Atlanthis/faces/index.xhtml" aria-label="Volver a la página principal"><i class="fa-solid fa-house"></i> Inicio</a></li>
-                      <li class="breadcrumb-item activeB nombrePerfil" aria-current="page"></li>
+                      <li class="breadcrumb-item activeB nombrePerfil" aria-current="page">Mi Perfil</li>
                     </ol>
                 </nav>
             </div>
             <main class="container contenedorPerfiles mt-5 mb-5">
-
+                <h:form>
+                    <div class="container-fluid d-flex flex-row justify-content-start">
+                        <div class="contenedorFoto">
+                            <p:graphicImage name="img/#{beanLogin.usu.imagen}" class="img-responsive fotoPerfil me-2 me-sm-0 mb-1 mb-sm-0" height="150" alt="Foto de perfil"/>
+                            <h4 class="center">#{beanLogin.usu.nombre}</h4>
+                        </div>
+                        <div class="contenedorInfo">
+                            <ul class="ulPerfil">
+                                <p:fileUpload mode="simple" label="Imagen" dragDropSupport="true" chooseButtonTitle="Imagen" listener="#{beanMiperfil.handleFileUpload}" auto="true" value="#{beanMiperfil.file}" skinSimple="true" multiple="false" allowTypes="/(\.|\/)(gif|jpe?g|png)$/"/>
+                                <li><span>Nombre:  </span> <p:inputText value="#{beanMiperfil.nombre}" placeholder="Nombre" required="true" /> </li>
+                                <li><span>Apellidos:  </span> <p:inputText value="#{beanMiperfil.apellidos}" placeholder="Apellidos" required="true" /> </li>
+                                <li><span>Fecha de nacimiento:  </span> <p:datePicker id="basic" value="#{beanMiperfil.fecha_naci}" monthNavigator="true" yearNavigator="true" showWeek="true" /></li>
+                                <li><span>Pais:  </span> 
+                                    <h:selectOneMenu required="" value="#{beanMiperfil.pais}" styleClass="form-control">
+                                        <f:selectItem itemValue="Alemania" itemLabel="Alemania"/>
+                                        <f:selectItem itemValue="China" itemLabel="China"/>
+                                        <f:selectItem itemValue="España" itemLabel="España"/>
+                                        <f:selectItem itemValue="EEUU" itemLabel="Estados Unidos"/>
+                                        <f:selectItem itemValue="Francia" itemLabel="Francia"/>
+                                    </h:selectOneMenu>
+                                </li>
+                                <p:commandButton value="Guardar" styleClass="mt-2" ajax="false" actionListener="#{beanMiperfil.guardar()}" />
+                            </ul>
+                        </div>
+                    </div>
+                </h:form>
             </main>
         </ui:define>
     </ui:composition>
