--- a/src/main/webapp/admin_princi.xhtml
+++ b/src/main/webapp/admin_princi.xhtml
@@ -11,8 +11,14 @@
         </ui:define>
         <ui:define name="contenido">
             <header class="align-self-center fs-1 text-center fw-bold">Hilos mas activos.</header>
-            <div id="char1"></div>
-            <div id="char2"></div>
+            <div class="mt-3 card d-flex flex-row justify-content-between">
+                <div id="char1"></div>
+                <div id="char2"></div>
+            </div>
+            <div class="mt-3 card d-flex flex-row justify-content-between">
+                <div id="char3"></div>
+                <div id="char4"></div>
+            </div>
         </ui:define>
     </ui:composition>
 </html>
